Uncatched NSExceptions should crash the web process https://bugs.webkit.org/show_bug.cgi?id=130923 <rdar://problem/16463751>

Reviewed by Dan Bernstein.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):

Canonical link: https://commits.webkit.org/148968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166452 268f45cc-cd09-0410-ab3c-d52691b4dbfc